notebook: use load_db_from_config to load everything from a single config

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -28,21 +28,25 @@
    "source": [
     "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
     "import logging\n",
+    "\n",
     "# 10.1.0.4\n",
     "# 192.168.11.221\n",
-    "back = PiperBackend(config={\n",
+    "\n",
+    "config = {\n",
     "  \"dry\": True,\n",
-    "  # \"ws_address\": \"\",\n",
-    "  \"ws_address\": \"ws://192.168.11.221:7125/websocket\",\n",
-    "  \"sio_address\": \"http://192.168.11.221:3333\",\n",
+    "  \"ws_address\": \"\", \"sio_address\": \"\",\n",
+    "  # \"ws_address\": \"ws://localhost:7125/websocket\",\n",
+    "  # \"sio_address\": \"http://localhost:3333\",\n",
     "  # \"loglevel\": 3,\n",
     "  # \"verbose\": True\n",
     "  \"datatools\": \"mongo\",\n",
     "  \"database\": {\n",
-    "    \"mongo_url\": 'mongodb://192.168.11.221:27017/',\n",
+    "    \"mongo_url\": 'mongodb://localhost:27017/',\n",
     "    \"database_name\": 'pipettin-2024-09-26'\n",
     "  }\n",
-    "})"
+    "}\n",
+    "\n",
+    "back = PiperBackend(config=config)"
    ]
   },
   {
@@ -52,15 +56,11 @@
    "outputs": [],
    "source": [
     "from pylabrobot.resources.pipettin import SilverDeck\n",
+    "from piper.datatools.datautils import load_db_from_config\n",
     "\n",
-    "# Instantiate and empty SilverDeck.\n",
-    "deck = SilverDeck(\n",
-    "  workspace=back.database_tools.getWorkspaceByName(\"Experiment 2024-09-27\"),\n",
-    "  platforms=back.database_tools.platforms,\n",
-    "  containers=back.database_tools.containers,\n",
-    "  tools=back.database_tools.tools,\n",
-    "  subset_platforms=False\n",
-    ")\n",
+    "# Instantiate the SilverDeck.\n",
+    "db = load_db_from_config(config=config)\n",
+    "deck = SilverDeck(db=db, db_name='pipettin-2024-09-26', workspace_name=\"Experiment\")\n",
     "deck.summary()"
    ]
   },
@@ -99,9 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
-    "\n",
-    "pickups = await lh.pick_up_tips(tip_rack[\"A3\"], use_channels=[1])"
+    "back.channels"
    ]
   },
   {
@@ -110,7 +108,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lh.head"
+    "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
+    "\n",
+    "pickups = await lh.pick_up_tips(tip_rack[\"A3\"], use_channels=back.channels.PMULTI)"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "source": [
     "tube_rack = deck[\"Tube Rack [5x16]\"]\n",
     "\n",
-    "aspirations = await lh.aspirate(tube_rack[\"A1\"], vols=[100], use_channels=[1])"
+    "aspirations = await lh.aspirate(tube_rack[\"A1\"], vols=[100], use_channels=back.channels.PMULTI)"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "well_plate = deck[\"Standard 384-well plate\"]\n",
     "\n",
     "for well in well_plate[\"B2:B7\"]:\n",
-    "  dispenses = await lh.dispense([well], vols=[15], use_channels=[1])"
+    "  dispenses = await lh.dispense([well], vols=[15], use_channels=back.channels.PMULTI)"
    ]
   },
   {
