pipettin: merge make_silver_deck and make_silver; move SilverDeck.load_objects to piper's get_objects_from_db

--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -1295,14 +1295,14 @@
    "outputs": [],
    "source": [
     "from pylabrobot.resources import set_tip_tracking, set_volume_tracking, SilverDeck\n",
-    "from pylabrobot.resources.pipettin import pipettin_db_url\n",
+    "from pylabrobot.resources.pipettin import db_location\n",
     "\n",
     "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
     "set_volume_tracking(enabled=True)\n",
     "set_tip_tracking(enabled=True)\n",
     "\n",
     "# Get objects.\n",
-    "deck = SilverDeck(db=pipettin_db_url, workspace_name=\"MK3 Baseplate\")\n",
+    "deck = SilverDeck(db=db_location, workspace_name=\"MK3 Baseplate\")\n",
     "rack = deck[\"Tube Rack [5x16]\"]\n",
     "spots = rack.get_all_items()\n",
     "spot = next(spot for spot in spots if spot.has_tube())\n",
