--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -56,10 +56,10 @@
    "outputs": [],
    "source": [
     "from pylabrobot.resources.pipettin import SilverDeck\n",
-    "from piper.datatools.datautils import load_db_from_config\n",
+    "from piper.datatools.datautils import get_db_from_config\n",
     "\n",
     "# Instantiate the SilverDeck.\n",
-    "db = load_db_from_config(config=config)\n",
+    "db = get_db_from_config(config=config)\n",
     "deck = SilverDeck(db=db, db_name='pipettin-2024-09-26', workspace_name=\"Experiment\")\n",
     "deck.summary()"
    ]
@@ -110,7 +110,7 @@
    "source": [
     "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
     "\n",
-    "pickups = await lh.pick_up_tips(tip_rack[\"A3\"], use_channels=back.channels.PMULTI)"
+    "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=back.channels.PMULTI)"
    ]
   },
   {
@@ -152,15 +152,6 @@
    "outputs": [],
    "source": [
     "await lh.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "well_plate[\"B2:B7\"]"
    ]
   },
   {
