notebook: replace mongo_url and setup SilverDeck from config directly

--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -41,7 +41,7 @@
     "  # \"verbose\": True\n",
     "  \"datatools\": \"mongo\",\n",
     "  \"database\": {\n",
-    "    \"mongo_url\": 'mongodb://localhost:27017/',\n",
+    "    \"database_url\": 'localhost:27017',\n",
     "    \"database_name\": 'pipettin-2024-09-26'\n",
     "  }\n",
     "}\n",
@@ -56,11 +56,9 @@
    "outputs": [],
    "source": [
     "from pylabrobot.resources.pipettin import SilverDeck\n",
-    "from piper.datatools.datautils import get_db_from_config\n",
     "\n",
     "# Instantiate the SilverDeck.\n",
-    "db = get_db_from_config(config=config)\n",
-    "deck = SilverDeck(db=db, db_name='pipettin-2024-09-26', workspace_name=\"Experiment\")\n",
+    "deck = SilverDeck(config=config, workspace_name=\"Experiment\")\n",
     "deck.summary()"
    ]
   },
