--- a/notebooks/pipettin-bot.ipynb
+++ b/notebooks/pipettin-bot.ipynb
@@ -33,7 +33,7 @@
                 "# 192.168.11.221\n",
                 "\n",
                 "config = {\n",
-                "  \"dry\": True,\n",
+                "  \"dry\": True, \"verbose\": True,\n",
                 "  \"ws_address\": \"\", \"sio_address\": \"\",\n",
                 "  # \"ws_address\": \"ws://localhost:7125/websocket\",\n",
                 "  # \"sio_address\": \"http://localhost:3333\",\n",
@@ -43,7 +43,7 @@
                 "  \"database\": {\n",
                 "    \"database_url\": 'localhost:27017',\n",
                 "    # \"env_file\": \"~/pipettin-bot/code/pipettin-gui/.env\",\n",
-                "    \"database_name\": 'pipettin-2024-09-26'\n",
+                "    \"database_name\": 'pipettin'\n",
                 "  }\n",
                 "}\n",
                 "\n",
@@ -98,6 +98,17 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
+                "\n",
+                "tip_rack.print_grid()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "back.channels"
             ]
         },
@@ -107,9 +118,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "tip_rack = deck.get_resource(\"Blue tip rack\")\n",
-                "\n",
-                "pickups = await lh.pick_up_tips(tip_rack[\"A1\"], use_channels=back.channels.PMULTI)"
+                "pickups = await lh.pick_up_tips(tip_rack[\"A3\"], use_channels=back.channels.PMULTI)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# TODO: Chequear que piper esté usando el tip que le pasé."
             ]
         },
         {
@@ -141,18 +159,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "trash = deck[\"Trash Bucket\"]\n",
+                "trash = deck[\"Tall Trash\"]\n",
                 "\n",
-                "await lh.drop_tips([trash], use_channels=back.channels.PMULTI_OTM)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# TODO: Chequear que piper esté usando el tip que le pasé."
+                "await lh.drop_tips([trash], use_channels=back.channels.PMULTI, allow_nonzero_volume=True)"
             ]
         },
         {
@@ -195,7 +204,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.6"
+            "version": "3.13.1"
         }
     },
     "nbformat": 4,
